switch from gulp to webpack, and split components into separate files

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pulsey</title>
-  <link rel="stylesheet" type="text/css" href="pulsey.css" />
+  <title>PulseyTour Demo</title>
+  <link rel="stylesheet" type="text/css" href="src/pulsey.css" />
 </head>
-
 <body>
   <div class="wrapper">
     <div class="ps-welcome" data-ps-header="Ready yourself for some Pulsey!" data-ps-content="Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.  Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini."></div>
@@ -18,8 +17,7 @@
     <div class="ps-anchor" data-ps-step="8" data-ps-custom="<div>yebo yebo yebo</div>"></div>
     <div class="ps-farewell" data-ps-header="Thanks for taking the PulseyTour!" data-ps-content="Don't be a stranger now ;)"></div>
   </div>
-  <div id="pulsey"></div>
-  <script type="text/javascript" src="pulsey.js"></script>
-
+  <div id="pulsey"/>
+  <script src="bundle.js"></script>
 </body>
-<html>
+</html>
