--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="pt-welcome" data-pt-header="Ready yourself for some Pulsey!" data-pt-content="Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.  Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini."></div>
+    <div class="pt-welcome" data-pt-header="Ready yourself for some Pulsey!" data-pt-content="Veggies es bonus vobis, proinde vos postulo essum magis."></div>
     <div class="pt-anchor" data-pt-step="1" data-pt-header="yebo!" data-pt-note="yebo yebo yebo"></div>
     <div class="pt-anchor" data-pt-step="2" data-pt-header="Yo, check it" data-pt-note="PulseyTour listens for an event before starting.  That event is when the document loads by default."></div>
-    <div class="pt-anchor" data-pt-step="3" style="width: 150px; height: 50px;"></div>
-    <div class="pt-anchor" data-pt-step="4"></div>
-    <div class="pt-anchor" data-pt-step="5" style="width: 50px; height: 200px;"></div>
-    <div class="pt-anchor" data-pt-step="6"></div>
-    <div class="pt-anchor" data-pt-step=7 style="width: 300px; height: 150px;"></div>
-    <div class="pt-anchor" data-pt-step="8" data-pt-custom="<div>yebo yebo yebo</div>"></div>
+    <div class="pt-anchor" data-pt-step="3" data-pt-header="yebo!" data-pt-note="yebo yebo yebo" style="width: 150px; height: 50px;"></div>
+    <div class="pt-anchor" data-pt-step="4" data-pt-header="yebo!" data-pt-note="yebo yebo yebo"></div>
+    <div class="pt-anchor" data-pt-step="5" data-pt-header="yebo!" data-pt-note="yebo yebo yebo" style="width: 50px; height: 200px;"></div>
+    <div class="pt-anchor" data-pt-step="6" data-pt-header="yebo!" data-pt-note="yebo yebo yebo"></div>
+    <div class="pt-anchor" data-pt-step="7" data-pt-header="yebo!" data-pt-note="yebo yebo yebo" style="width: 300px; height: 150px;"></div>
+    <div class="pt-anchor" data-pt-step="8" data-pt-header="yebo!" data-pt-note="yebo yebo yebo" data-pt-custom="<div>yebo yebo yebo</div>"></div>
     <div class="pt-farewell" data-pt-header="Thanks for taking the PulseyTour!" data-pt-content="Don't be a stranger now ;)"></div>
   </div>
   <div id="pulsey"/>
